# cat_service

./: .gitignore  CMakeLists.txt  README.md  cat_service.drawio
Cat/: CMakeLists.txt  Cat.cpp  Cat.h
Handler/: CMakeLists.txt  Handler.cpp  Handler.h
Orchestrator/: CMakeLists.txt  Orchestrator.cpp  Orchestrator.h
Server/: CMakeLists.txt  Server.cpp  Server.h
cat_website/: app.py  cat_log.txt  external.html  internal.html  requirements.txt
client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
enviroments/: enviroments.h
feed_the_cat/: CMakeLists.txt  Cat.cpp  Cat.h  main.cpp
